Changed removeLast, getLast, getFirst methods to simple remove, get because CMD won't recognize them